# rcpa

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.yaml  dev.sh  docker-compose.yaml
.github/workflows/: ci.yml  docker.yml  release.yml
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx  navigation.js
frontend/src/components/: ConfigView.jsx  CopyableHoverText.jsx  DashboardView.jsx  KeysView.jsx  LoginOverlay.jsx  LogsView.jsx  ProvidersView.jsx
frontend/src/hooks/: use-toast-api.js
frontend/src/layouts/: AdminSidebar.jsx  ProtectedLayout.jsx
frontend/src/pages/: ConfigPage.jsx  DashboardPage.jsx  KeysPage.jsx  LogsPage.jsx  ProvidersPage.jsx
frontend/src/routes/: AppRoutes.jsx
frontend/src/utils/: api.js  display.js  theme.js  timeControls.js
migrations/: 20250115000000_create_request_logs.sql  20260707000000_remove_routing_strategy_from_request_logs.sql  20260708000000_simplify_request_logs_schema.sql  20260723000000_create_request_log_metrics.sql  20260723010000_backfill_final_provider_models.sql  20260723020000_add_request_log_body_gc_index.sql
src/: admin.rs  config.rs  config_service.rs  error.rs  lib.rs  main.rs
src/middleware/: auth.rs  metrics.rs  request_id.rs
src/protocol/: audit.rs  common.rs  mod.rs  translation.rs
src/protocol/anthropic/: messages.rs
src/provider/: anthropic.rs  client.rs  mod.rs  openai.rs
src/retry/: policy.rs
src/routing/: mod.rs  model_config.rs  sticky.rs  strategy.rs
src/server/: mod.rs  router.rs
src/stats/: collector.rs  cost.rs  mod.rs  types.rs
src/store/: analytics.rs  migrations.rs  mod.rs  models.rs  request_log_gc.rs  request_log_repo.rs
tests/: integration_test.rs
(+18 files in other folders)
