[package]
name = "rcpa"
version = "0.0.1"
edition = "2021"
description = "Rust Cloud Proxy API - LLM gateway"
readme = "README.md"
keywords = ["llm", "gateway", "proxy", "api"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "json", "query", "form", "multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "timeout", "request-id", "compression-gzip", "decompression-gzip", "auth"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "gzip", "brotli", "http2"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Concurrency
dashmap = "6"
parking_lot = "0.12"
arc-swap = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# IDs
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP types
http = "1"
hyper = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Utilities
bytes = "1"
pin-project-lite = "0.2"
once_cell = "1"
regex = "1"
rand = "0.8"
sha2 = "0.11.0"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true
